syntax = "proto3";

package io.openliberty.sample;
option java_multiple_files = true;

service SampleService {
    // unary
    rpc getGreeting (GreetingRequest) returns (GreetingResponse) {}

    // server streaming
    rpc getServerStreamingGreeting (GreetingRequest) returns (stream GreetingResponse) {}

    // client streaming
    rpc getClientStreamingGreeting (stream GreetingRequest) returns (GreetingResponse) {}

    // bidirectional streaming
    rpc getBidirectionalGreeting (stream GreetingRequest) returns (stream GreetingResponse) {}
}

message GreetingRequest {
  string name = 1;
}

message GreetingResponse {
  string message = 1;
}
